--- a/down.html
+++ b/down.html
@@ -14,7 +14,7 @@
  <h1>Downloads</h1> <hr>
  <ul type="circle">
 <li><a href="Apost_Excel_10_Basico.pdf"downlod="Apost_Excel_10_Basico.pdf">Apost_Excel_10_Basico.pdf</a></li>
-<li><a href="#"></a></li>
+<li><a href="Laravel.pdf"download="Laravel.pdf">Laravel.pdf</a></li>
 <li><a href="#"></a></li>
 <li><a href="#"></a></li>
  </ul>  
