--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <br>
  <h1>Downloads</h1> <hr>
  <ul type="circle">
-<li><a href="Apost_Excel_10_Basico.pdf"downlod="Apost_Excel_10_Basico.pdf">Apost_Excel_10_Basico.pdf</a></li>
+<li><a href="Apost_Excel_10_Basico.pdf"download="Apost_Excel_10_Basico.pdf">Apost_Excel_10_Basico.pdf</a></li>
 <li><a href="Laravel.pdf"download="Laravel.pdf">Laravel.pdf</a></li>
 <li><a href="guia-pratico-ingles.pdf__"download="guia-pratico-ingles.pdf">guia-pratico-ingles.pdf</a></li>
 <li><a href="slackware_pkg_presentation.pdf"download="slackware_pkg_presentation.pdf">slackware_pkg_presentation.pdf</a></li>
