--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <li><a href="Laravel.pdf"download="Laravel.pdf">Laravel.pdf</a></li>
 <li><a href="guia-pratico-ingles.pdf__"download="guia-pratico-ingles.pdf">guia-pratico-ingles.pdf</a></li>
 <li><a href="slackware_pkg_presentation.pdf"download="slackware_pkg_presentation.pdf">slackware_pkg_presentation.pdf</a></li>
+<li><a href="sublime-text.deb"download="sublime-text.deb">sublime-text.deb</a></li>
+
  </ul>  
 </body>
 </html> 
