--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-    *{margin: 5px; padding:0; font-family: arial;}
-    </style>
-    <title>RAMONINF TEC</title>
-</head>
-<body>
-<br>
- <h1>Downloads</h1> <hr>
+
+<html>
+ <head>
+  <title>Index of /pub/title>
+ </head>
+ <body>
+<h1>Index of /pub/</h1>
+<pre>      <a href="?C=N;O=D">Name</a>                                    <a href="?C=M;O=A">Last modified</a>      <a href="?C=S;O=A">Size</a>  <a href="?C=D;O=A">Description</a><hr>      <a href="0_README.txt">0_README.txt</a>                            2020-11-06 11:32  2.4K  
+
  <ul type="circle">
 <li><a href="Apost_Excel_10_Basico.pdf"download="Apost_Excel_10_Basico.pdf">Apost_Excel_10_Basico.pdf</a></li>
 <li><a href="Laravel.pdf"download="Laravel.pdf">Laravel.pdf</a></li>
@@ -20,5 +15,5 @@
 <li><a href="sublime-text.deb"download="sublime-text.deb">sublime-text.deb</a></li>
 
  </ul>  
-</body>
-</html> 
+<hr></pre>
+</body></html> 
