--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </head>
  <body>
 <h1>Index of /pub/</h1>
-<pre>      <a href="?C=N;O=D">Name</a>                                    <a href="?C=M;O=A">Last modified</a>      <a href="?C=S;O=A">Size</a>  <a href="?C=D;O=A">Description</a><hr>      <a href="0_README.txt">0_README.txt</a>                            2020-11-06 11:32  2.4K  
+<pre>      
 
  <ul type="circle">
 <li><a href="Apost_Excel_10_Basico.pdf"download="Apost_Excel_10_Basico.pdf">Apost_Excel_10_Basico.pdf</a></li>
