--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </head>
  <body>
 <h1>Index of /pub/</h1>
-<pre>      
+<pre><hr>   
 
  <ul type="circle">
 <li><a href="Apost_Excel_10_Basico.pdf"download="Apost_Excel_10_Basico.pdf">Apost_Excel_10_Basico.pdf</a></li>
