--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Index of /pub/</title>
  </head>
  <body>
-<h1>Index of /pub/</h1>
-<pre><hr>   
+<h1>Index of /pub/</h1><hr>
+<pre>  
 
  <ul type="circle">
 <li><a href="Apost_Excel_10_Basico.pdf"download="Apost_Excel_10_Basico.pdf">Apost_Excel_10_Basico.pdf</a></li>
